--- a/src/Editor.css
+++ b/src/Editor.css
@@ -7,6 +7,13 @@
   margin: 0 !important;
   width: max-content !important;
   z-index: 10;
+  max-width: initial;
+}
+
+.propertyContainer .modal-body {
+  overflow-y: auto;
+  max-height: 200px;
+  min-width: 200px;
 }
 
 .propertyContainer > .modal-dialog label {
