--- a/src/Editor.css
+++ b/src/Editor.css
@@ -56,7 +56,8 @@
 }
 
 .array-item.dragging {
-  opacity: 0 !important;
+  opacity: 0.5 !important;
+  border: medium dashed darkgreen !important;
 }
 
 .array-item > button {
